# django-scraper

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/proxies/: apps.py  forms.py  models.py  tables.py  urls.py  views.py
scraper/proxies/migrations/: 0001_initial.py
scraper/proxies/templates/proxies/: _proxy_form_fields.html  proxy_create.html  proxy_list.html  proxy_list_actions.html  proxy_update.html
scraper/proxies/templates/proxies/includes/: proxy_form_fields.html
scraper/proxies/tests/: test_forms.py  test_models.py  test_views.py
scraper/scraper/: settings.py
scraper/scraper/spiders/: proxy.py
scraper/spiders/: proxies.py
scraper/static/js/: delete.js
scraper/templates/: base.html
webapp/proxies/: admin.py  apps.py  forms.py  tables.py  urls.py  views.py
webapp/proxies/migrations/: 0001_initial.py  0002_remove_proxy_region_remove_proxy_response_and_more.py
webapp/proxies/templates/proxies/: proxy_create.html
webapp/proxies/templates/proxies/includes/: proxy_modal_confirm_delete.html
webapp/templates/: base.html
