[tool.poetry]
name = "django-scraper"
version = "0.1.0"
description = ""
authors = ["Diogo Alves <diogo.alves.ti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.2"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
Django = "^4.0.3"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
whitenoise = "^6.0.0"
pytest = "^7.0.1"
pytest-django = "^4.5.2"
django-tables2 = "^2.4.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[tool.black]
skip-string-normalization = true
line-length = 79
multi_line_output = 3

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
